# fit-predict-vk-api

./: .gitignore  Makefile  README.md  pyproject.toml
src/: labels.py  main.py  schemas.py
src/models/: bert.py  ner.py  pipeline.py  xgboost.py
