[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["myashchenko <chemist138@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
pydantic = "^2.7.0"
uvicorn = "^0.29.0"
numpy = "^1.26.4"


[tool.poetry.group.ml.dependencies]
torch = "^2.2.2"
transformers = "^4.40.0"
xgboost = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
